fix historyManager: сохранить только последний просмотр задачи, убрать ограничение на размер